--- a/data/coco.yaml
+++ b/data/coco.yaml
@@ -14,16 +14,101 @@ val: val2017.txt  # val images (relative to 'path') 5000 images
 test: test-dev2017.txt  # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
 
 # Classes
-nc: 80  # number of classes
-names: ['person', 'bicycle', 'car', 'motorcycle', 'airplane', 'bus', 'train', 'truck', 'boat', 'traffic light',
-        'fire hydrant', 'stop sign', 'parking meter', 'bench', 'bird', 'cat', 'dog', 'horse', 'sheep', 'cow',
-        'elephant', 'bear', 'zebra', 'giraffe', 'backpack', 'umbrella', 'handbag', 'tie', 'suitcase', 'frisbee',
-        'skis', 'snowboard', 'sports ball', 'kite', 'baseball bat', 'baseball glove', 'skateboard', 'surfboard',
-        'tennis racket', 'bottle', 'wine glass', 'cup', 'fork', 'knife', 'spoon', 'bowl', 'banana', 'apple',
-        'sandwich', 'orange', 'broccoli', 'carrot', 'hot dog', 'pizza', 'donut', 'cake', 'chair', 'couch',
-        'potted plant', 'bed', 'dining table', 'toilet', 'tv', 'laptop', 'mouse', 'remote', 'keyboard', 'cell phone',
-        'microwave', 'oven', 'toaster', 'sink', 'refrigerator', 'book', 'clock', 'vase', 'scissors', 'teddy bear',
-        'hair drier', 'toothbrush']  # class names
+nc: 93  # number of classes
+names: ['person', 
+        'bicycle', 
+        'car', 
+        'motorcycle', 
+        'airplane', 
+        'bus', 
+        'train', 
+        'truck', 
+        'boat', 
+        'traffic light',
+        'fire hydrant', 
+        'stop sign', 
+        'parking meter', 
+        'bench', 
+        'bird', 
+        'cat', 
+        'dog', 
+        'horse', 
+        'sheep', 
+        'cow',
+        'elephant', 
+        'bear', 
+        'zebra', 
+        'giraffe', 
+        'backpack', 
+        'umbrella', 
+        'handbag', 
+        'tie', 
+        'suitcase', 
+        'frisbee',
+        'skis', 
+        'snowboard', 
+        'sports ball', 
+        'kite', 
+        'baseball bat', 
+        'baseball glove', 
+        'skateboard', 
+        'surfboard',
+        'tennis racket', 
+        'bottle', 
+        'wine glass', 
+        'cup', 
+        'fork', 
+        'knife', 
+        'spoon', 
+        'bowl', 
+        'banana', 
+        'apple',
+        'sandwich', 
+        'orange', 
+        'broccoli', 
+        'carrot', 
+        'hot dog', 
+        'pizza', 
+        'donut', 
+        'cake', 
+        'chair', 
+        'couch',
+        'potted plant', 
+        'bed', 
+        'dining table', 
+        'toilet', 
+        'tv', 
+        'laptop', 
+        'mouse', 
+        'remote', 
+        'keyboard', 
+        'cell phone',
+        'microwave', 
+        'oven', 
+        'toaster', 
+        'sink', 
+        'refrigerator', 
+        'book', 
+        'clock', 
+        'vase', 
+        'scissors', 
+        'teddy bear',
+        'hair drier', 
+        'toothbrush', 
+        'do_not_enter', 
+        'left_turn_only_arrow', 
+        'pedestrian_xing', 
+        'right_turn_only_arrow', 
+        'speed_limit_10', 
+        'speed_limit_20', 
+        'speed_limit_5', 
+        'handicap_parking', 
+        'left_turn_only_words', 
+        'P_parking', 
+        'right_turn_only_words', 
+        'speed_limit_15', 
+        'speed_limit_25']
+
 
 
 # Download script/URL (optional)
